--- a/package.json
+++ b/package.json
@@ -129,9 +129,8 @@
 		"electron-next": "^3.1.5",
 		"electron-updater": "^5.0.1",
 		"eslint-import-resolver-alias": "^1.1.2",
-		"font-list": "^1.4.5",
+		"font-detect-rhl": "1.0.5-1",
 		"fs-extra": "^10.1.0",
-		"get-system-fonts": "^2.0.2",
 		"gitea-react-toolkit": "^2.1.2",
 		"i18next": "^21.8.9",
 		"is-electron": "^2.2.1",
