--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
 		"@ory/kratos-client": "^0.10.1",
 		"@tailwindcss/forms": "^0.5.2",
 		"@tailwindcss/typography": "^0.5.2",
+		"adm-zip": "^0.5.9",
 		"bible-reference-rcl": "^1.1.0",
 		"clsx": "1.1.1",
 		"electron-is-dev": "^2.0.0",
