--- a/package.json
+++ b/package.json
@@ -114,11 +114,13 @@
 	},
 	"dependencies": {
 		"@electron/remote": "^2.0.8",
+		"@emotion/styled": "^11.10.4",
 		"@headlessui/react": "^1.6.4",
 		"@heroicons/react": "^1.0.6",
 		"@material-ui/core": "^4.12.4",
 		"@material-ui/icons": "^4.11.3",
 		"@material-ui/lab": "4.0.0-alpha.57",
+		"@mui/lab": "^5.0.0-alpha.104",
 		"@ory/kratos-client": "^0.10.1",
 		"@tailwindcss/forms": "^0.5.2",
 		"@tailwindcss/typography": "^0.5.2",
@@ -156,7 +158,7 @@
 		"react-i18next": "^11.17.1",
 		"react-media-recorder": "^1.6.6",
 		"tc-ui-toolkit": "^5.3.3",
-		"translation-helps-rcl": "^3.3.0",
+		"translation-helps-rcl": "^3.3.4-rc.3",
 		"usfm-editor": "0.8.7",
 		"usfm-grammar": "^2.3.0",
 		"uuid": "^8.3.2",
@@ -176,6 +178,7 @@
 		"react-dom": "$react-dom",
 		"@material-ui/lab": "$@material-ui/lab",
 		"gitea-react-toolkit": "$gitea-react-toolkit",
-		"word-aligner": "$word-aligner"
+		"word-aligner": "$word-aligner",
+		"@mui/lab": "$@mui/lab"
 	}
 }
