--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,9 +8,12 @@
 		"plugin:import/warnings",
 		"plugin:jsx-a11y/recommended",
 		"plugin:react-hooks/recommended",
-		"airbnb"
+		"airbnb",
+		"next"
 	],
 	"rules": {
+		"@next/next/no-html-link-for-pages": "off",
+		"@next/next/no-img-element": "off",
 		"react/react-in-jsx-scope": "off",
 		"no-underscore-dangle": "off",
 		"no-unused-expressions": "off",
