--- a/package.json
+++ b/package.json
@@ -133,6 +133,7 @@
 		"adm-zip": "^0.5.9",
 		"bible-reference-rcl": "^1.1.0",
 		"clsx": "1.1.1",
+		"crypto-js": "^4.1.1",
 		"electron-is-dev": "^2.0.0",
 		"electron-log": "4.4.7",
 		"electron-next": "^3.1.5",
@@ -146,7 +147,6 @@
 		"i18next": "^21.8.9",
 		"is-electron": "^2.2.1",
 		"js-yaml": "^4.1.0",
-		"jsonwebtoken": "^8.5.1",
 		"localforage": "1.10.0",
 		"lodash.isequal": "^4.5.0",
 		"markdown-translatable": "^1.3.0",
