--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,5 +25,5 @@
 	"editor.codeActionsOnSave": {
 		"source.fixAll.eslint": true
 	},
-	"eslint.workingDirectories": [],
+  "eslint.workingDirectories": []
 }
