--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prod": "npm run build && next start",
     "test": "jest",
     "e2e": "npx playwright test",
+    "report":"npx playwright test --reporter=html && npx playwright show-report",
     "lint": "eslint ./renderer/src",
     "lint:fix": "eslint ./renderer/src --fix",
     "maxmemory-allocation": "NODE_OPTIONS=--max_old_space_size=4096",
